Commit smallscreen corected

--- a/sass/_smallscreen.sass
+++ b/sass/_smallscreen.sass
@@ -2,110 +2,112 @@
 @media (max-width:1100px)
     .main-text 
         h1
-            font-size: 2em
+            font-size: 2em !important
            
     .header
-        flex-wrap: wrap
-        width: 100%
-        background: white
+        flex-wrap: wrap !important
+        width: 100% !important
+        background: white  !important
 
         &-wrapper
-            height: 8vh
+            height: 8vh !important
    
     .logo
-        position: relative
-        display: flex
-        justify-content: space-between 
-        align-items: center 
-        width: 100%
+        position: relative !important
+        display: flex !important
+        justify-content: space-between !important
+        align-items: center  !important
+        width: 100% !important
 
         img
-            max-width: 100%
-            max-height: 100%
-            display: block
-            cursor: pointer
-            max-height: 8vh
+            max-width: 100% !important
+            max-height: 100% !important
+            display: block !important
+            cursor: pointer !important
+            max-height: 8vh !important
 
         .hamburger
-            display:block
-            margin: 0
+            display:block !important
+            margin: 0 !important
 
-        .menu
-            display:none
-            width: 100%
-            background: white
+    .menu
+            display:none !important
+            width: 100% !important
+            background: white !important
   
     .header-wrapper.active
-        display: flex
-        width: 100%
-        flex-direction: column
+        display: flex !important
+        width: 100% !important
+        flex-direction: column !important
 
         .menu 
-            display: flex
+            display: flex !important
 
             ul
-                flex-direction: column
-                display: flex
+                flex-direction: column !important
+                display: flex !important
 
                 li
-                    margin: .5em auto
-                    font-size: 1em
-                    transition: 0.25s ease-in-out
+                    margin: .5em auto !important
+                    font-size: 1em !important
+                    transition: 0.25s ease-in-out !important
 
             &-small 
-                display: flex 
+                display: flex  !important
 
     .info-wrapper
-        flex-direction: column
+        flex-direction: column !important
     
     .info-item
-        width: 60%
-        height: auto
-        margin: 3em auto
+        width: 60% !important
+        height: auto !important
+        margin: 3em auto !important
 
         img
-            margin: -1.8em auto 1em
+            margin: -1.8em auto 1em !important
         a
-            margin: 2em 0         
+            margin: 2em 0  !important
+
     .about
         &-wrapper
-            flex-direction: column
+
+            flex-direction: column !important
             img
-                margin: 1em
-                width: 95%
-                height: auto
+                margin: 1em !important
+                width: 95% !important
+                height: auto !important
              
 
 @media(max-width:850px)
     .main
-        background-position: 78% center   
+        background-position: 78% center  !important
     .gallery
         .imgs 
-            grid-template-columns: repeat(2,1fr)  
+            grid-template-columns: repeat(2,1fr)   !important
         .imgs-info
-            text-align: center
+            text-align: center !important
         .osnovni
-            display: flex
-            flex-wrap: wrap
+            display: flex !important
+            flex-wrap: wrap !important
     .about 
         &-wrapper 
             img
-                margin: 1em
-                width: 90%
-                height: auto            
+                margin: 1em !important
+                width: 90% !important
+                height: auto   !important          
     .contact
         &-wrapper 
-            flex-direction: column
-            text-align: center
+            flex-direction: column !important
+            text-align: center !important
             &-order 
                 h1
-                    font-size: 2em
+                    font-size: 2em !important
                 h2
-                    margin-bottom: 2em        
+                    margin-bottom: 2em    !important     
             &-form-wrapper
-                width: 100%
+                width: 100% !important
                 .contact-form
-                    padding: 1.5em
+                    padding: 1.5em !important
                 
 
 @media (max-width:600px)
@@ -113,18 +115,18 @@
         &-container
             .lb-back
                 .lb-buttons
-                    bottom: 70px                  
+                    bottom: 70px  !important                 
     .info
         &-wrapper
 
             .info-item
-                flex-direction: column
+                flex-direction: column !important
                 width: 80%
     .contact
        &-wrapper
             &-order 
                 h1 
-                    font-size: 1.5em
+                    font-size: 1.5em !important
                 h2
-                    font-size: 1em
+                    font-size: 1em !important
                 
