Commit smallscreen corected

--- a/sass/_smallscreen.sass
+++ b/sass/_smallscreen.sass
@@ -103,7 +103,7 @@
                 h1
                     font-size: 2em !important
                 h2
-                    margin-bottom: 2em    !important     
+                    margin-bottom: 2em  !important     
             &-form-wrapper
                 width: 100% !important
                 .contact-form
@@ -118,10 +118,9 @@
                     bottom: 70px  !important                 
     .info
         &-wrapper
-
             .info-item
                 flex-direction: column !important
-                width: 80%
+                width: 80% !important
     .contact
        &-wrapper
             &-order 
