--- a/sass/_smallscreen.sass
+++ b/sass/_smallscreen.sass
@@ -59,7 +59,7 @@
         flex-direction: column !important
     
     .info-item
-        width: 60% !important
+        width: 80% !important
         height: auto !important
         margin: 3em auto !important
 
@@ -120,7 +120,7 @@
         &-wrapper
             .info-item
                 flex-direction: column !important
-                width: 80% !important
+                // width: 80% !important
     .contact
        &-wrapper
             &-order 
