Commit smallscreen corected

--- a/sass/_smallscreen.sass
+++ b/sass/_smallscreen.sass
@@ -58,10 +58,10 @@
     .info-wrapper
         flex-direction: column !important
     
-    .info-item
-        width: 80% !important
-        height: auto !important
-        margin: 3em auto !important
+        .info-item
+            width: 80% !important
+            height: auto !important
+            margin: 3em auto !important
 
         img
             margin: -1.8em auto 1em !important
@@ -119,8 +119,8 @@
     .info
         &-wrapper
             .info-item
-                flex-direction: column !important
-                // width: 80% !important
+                // flex-direction: column !important
+                width: 80% !important
     .contact
        &-wrapper
             &-order 
