--- a/sass/_contact.sass
+++ b/sass/_contact.sass
@@ -40,6 +40,7 @@
                 text-align: left
                 display: flex
                 flex-direction: column
+                margin-top: 1.5em
 
                 label 
                     display: block
